[gd_scene load_steps=5 format=2]

[ext_resource path="res://logo.png" type="Texture" id=1]
[ext_resource path="res://Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://bkg_korikann.png" type="Texture" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=4]

[node name="MainMenu" type="MarginContainer"]
margin_right = 320.0
margin_bottom = 202.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
z_index = 3

[node name="CenterContainer" type="CenterContainer" parent="Node2D"]
margin_right = 320.0
margin_bottom = 202.0

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/CenterContainer"]
margin_left = 65.0
margin_top = 51.0
margin_right = 254.0
margin_bottom = 150.0

[node name="CenterContainer" type="CenterContainer" parent="Node2D/CenterContainer/VBoxContainer"]
margin_right = 189.0

[node name="Label2" type="Label" parent="Node2D/CenterContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 189.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 2 )
text = "

Trouvez toutes les pieces !
"

[node name="CenterContainer2" type="CenterContainer" parent="Node2D/CenterContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 189.0
margin_bottom = 99.0

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 66.0
margin_right = 122.0
margin_bottom = 30.0

[node name="CenterContainer" type="CenterContainer" parent="Node2D/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 56.0
margin_bottom = 13.0

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 55.0
margin_bottom = 13.0

[node name="Selector1" type="Label" parent="Node2D/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 7.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="jOUER" type="Label" parent="Node2D/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 11.0
margin_right = 55.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "Jouer "

[node name="CenterContainer2" type="CenterContainer" parent="Node2D/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 17.0
margin_right = 56.0
margin_bottom = 30.0

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 56.0
margin_bottom = 13.0

[node name="Selector2" type="Label" parent="Node2D/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 7.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="Quitter" type="Label" parent="Node2D/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 11.0
margin_right = 56.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "Quitter"

[node name="Label" type="Label" parent="Node2D/CenterContainer"]
margin_left = 121.0
margin_top = 17.0
margin_right = 198.0
margin_bottom = 184.0
text = "








Par Navet56"

[node name="logo" type="Sprite" parent="Node2D/CenterContainer"]
position = Vector2( 160, 55.315 )
scale = Vector2( 1.07446, 1.1081 )
texture = ExtResource( 1 )

[node name="bkg_korikann" type="Sprite" parent="Node2D/CenterContainer"]
modulate = Color( 0.466667, 0.466667, 0.466667, 1 )
position = Vector2( 157.185, 100.949 )
scale = Vector2( 1.27327, 1.3898 )
z_index = -1
texture = ExtResource( 3 )
